Fixed note not being visible when textarea is hidden

--- a/problem-2/style.css
+++ b/problem-2/style.css
@@ -55,3 +55,7 @@ body {
     border: none;
     resize: none;
 }
+
+.note-content {
+    display: block;
+}
